--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-807.6KB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林), server: 213.183.53.177, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 38.121.43.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林), server: 213.183.53.200, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林), server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇯🇵 日本-494.2KB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: 38.68.134.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-842.7KB/s(Youtube:不良林), server: 38.68.134.85, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 38.121.43.71, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-3.29MB/s(Youtube:不良林), server: 38.68.134.85, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: 38.68.134.85, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-807.6KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-494.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-807.6KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-494.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-807.6KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-494.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-807.6KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-494.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-807.6KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-494.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-807.6KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-494.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-807.6KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-494.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
