--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林), server: 213.183.53.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇳🇱 荷兰-1.26MB/s(Youtube:不良林), server: 37.120.192.158, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇳🇱 荷兰-968.2KB/s(Youtube:不良林), server: 213.183.59.185, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-374.5KB/s(Youtube:不良林), server: 38.75.136.102, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-1.10MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇷🇺 俄罗斯联邦-820.4KB/s(Youtube:不良林), server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林), server: 213.183.53.200, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 38.68.134.85, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇨🇦 加拿大-2.27MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.43MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.34MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.45MB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-593.0KB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇭🇰 香港-1.55MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-374.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-968.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-820.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-374.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-968.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-820.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-374.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-968.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-820.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-374.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-968.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-820.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-374.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-968.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-820.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-374.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-968.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-820.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-374.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-968.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-820.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-374.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
