--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林), server: 213.183.53.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇳🇱 荷兰-1.26MB/s(Youtube:不良林), server: 37.120.192.158, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇳🇱 荷兰-968.2KB/s(Youtube:不良林), server: 213.183.59.185, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-374.5KB/s(Youtube:不良林), server: 38.75.136.102, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-486.4KB/s(Youtube:不良林), server: 38.75.136.102, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇳🇱 荷兰-1003.5KB/s(Youtube:不良林), server: 37.120.192.158, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇨🇳 中国-5.42MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇳 中国-1.45MB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇨🇳 中国-593.0KB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇭🇰 香港-1.55MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-968.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1003.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-968.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1003.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-968.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1003.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-968.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1003.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-968.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1003.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-968.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1003.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-968.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1003.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
